docs/api/qiskit/0.43/qiskit.visualization.plot_state_paulivec.mdx
---
title: plot_state_paulivec (v0.43)
description: API reference for qiskit.visualization.plot_state_paulivec in qiskit v0.43
in_page_toc_min_heading_level: 1
python_api_type: function
python_api_name: qiskit.visualization.plot_state_paulivec
---

<span id="qiskit-visualization-plot-state-paulivec" />

# qiskit.visualization.plot\_state\_paulivec

<Function id="qiskit.visualization.plot_state_paulivec" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/visualization/state_visualization.py" signature="plot_state_paulivec(state, title='', figsize=None, color=None, ax=None, *, rho=None, filename=None)">
  Plot the paulivec representation of a quantum state.

  Plot a bargraph of the density matrix of a quantum state using as a basis all possible tensor products of Pauli operators and identities, that is, $\{\bigotimes_{i=0}^{N-1}P_i\}_{P_i\in \{I,X,Y,Z\}}$, where $N$ is the number of qubits.

  <Admonition title="Deprecated since version 0.15.1" type="danger">
    `qiskit.visualization.state_visualization.plot_state_paulivec()`’s argument `rho` is deprecated as of qiskit-terra 0.15.1. It will be removed no earlier than 3 months after the release date. Instead, use the argument `state`, which behaves identically.
  </Admonition>

  **Parameters**

  *   **state** ([*Statevector*](qiskit.quantum_info.Statevector "qiskit.quantum_info.Statevector")  *or*[*DensityMatrix*](qiskit.quantum_info.DensityMatrix "qiskit.quantum_info.DensityMatrix") *or ndarray*) – an N-qubit quantum state.
  *   **title** (*str*) – a string that represents the plot title
  *   **figsize** (*tuple*) – Figure size in inches.
  *   **color** (*list or str*) – Color of the coefficient value bars.
  *   **ax** ([*matplotlib.axes.Axes*](https://matplotlib.org/stable/api/_as_gen/matplotlib.axes.Axes.html#matplotlib.axes.Axes "(in Matplotlib v3.7.2)")) – An optional Axes object to be used for the visualization output. If none is specified a new matplotlib Figure will be created and used. Additionally, if specified there will be no returned Figure since it is redundant.

  **Returns**

  The matplotlib.Figure of the visualization if the `ax` kwarg is not set

  **Return type**

  [`matplotlib.figure.Figure`](https://matplotlib.org/stable/api/figure_api.html#matplotlib.figure.Figure "(in Matplotlib v3.7.2)")

  **Raises**

  *   **MissingOptionalLibraryError** – Requires matplotlib.
  *   [**VisualizationError**](qiskit.visualization.VisualizationError "qiskit.visualization.VisualizationError") – if input is not a valid N-qubit state.

  **Examples**

  ```python
  # You can set a color for all the bars.

  from qiskit import QuantumCircuit
  from qiskit.quantum_info import Statevector
  from qiskit.visualization import plot_state_paulivec

  qc = QuantumCircuit(2)
  qc.h(0)
  qc.cx(0, 1)

  state = Statevector(qc)
  plot_state_paulivec(state, color='midnightblue', title="New PauliVec plot")
  ```

  ![../\_images/qiskit-visualization-plot\_state\_paulivec-1.png](/docs/images/api/qiskit/0.43/qiskit-visualization-plot_state_paulivec-1.avif)

  ```python
  # If you introduce a list with less colors than bars, the color of the bars will
  # alternate following the sequence from the list.

  import numpy as np
  from qiskit.quantum_info import DensityMatrix
  from qiskit import QuantumCircuit
  from qiskit.visualization import plot_state_paulivec

  qc = QuantumCircuit(2)
  qc.h(0)
  qc.cx(0, 1)

  qc = QuantumCircuit(2)
  qc.h([0, 1])
  qc.cz(0, 1)
  qc.ry(np.pi/3, 0)
  qc.rx(np.pi/5, 1)

  matrix = DensityMatrix(qc)
  plot_state_paulivec(matrix, color=['crimson', 'midnightblue', 'seagreen'])
  ```

  ![../\_images/qiskit-visualization-plot\_state\_paulivec-2.png](/docs/images/api/qiskit/0.43/qiskit-visualization-plot_state_paulivec-2.avif)
</Function>

